# srgat

./: Cargo.toml  LICENSE  README.md  codecov.sh  lcov.info
.github/workflows/: rust.yml
report/: index-sort-f.html  index-sort-l.html  index.html
report/src/: index-detail-sort-f.html  index-detail-sort-l.html  index-detail.html  index-sort-f.html  index-sort-l.html  index.html  main.rs.func-sort-c.html  main.rs.func.html  main.rs.gcov.html
src/: main.rs
