[package]
name = "srgat"
version = "0.1.0"
edition = "2021"
authors = ["Daisuke Oku <w.40141@gmail.com>"]
license = "MIT"
description = "Tag (TODO, FIX, FEATHRE, and so on) manegement cli in souce codes"
readme = "README.md"
repository = "https://github.com/w40141/srgat"
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.72"
structopt = "0.3.25"
